# tom.camp_redux

./: .pre-commit-config.yaml  LICENSE  docker-compose.yml
services/backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
services/backend/app/: auth.py  config.py  main.py
services/backend/app/models/: journals.py  users.py
services/backend/app/routes/: journal_routes.py  user_routes.py
services/frontend/: Dockerfile  package-lock.json  package.json
